# builders-hut

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  main.py  next-steps.md  notes  pyproject.toml  roadmap.md
builders_hut/: __main__.py  cmd_interface.py  utils.py
builders_hut/setups/: __init__.py  all_writes.py  base_setup.py  db_setup.py  env_setup.py  file_writer.py  file_writter.py  files_setup.py  git_setup.py  structure_setup.py
builders_hut/setups/database/: __init__.py  factory.py
builders_hut/setups/file_contents/: __init__.py  app_api.py  app_api_v1.py  app_core.py  app_database.py  app_main.py  app_model.py  app_repository.py  app_schema.py  app_scripts.py  app_services.py  app_templates.py  app_utils.py  common_api_file.py  core_file.py  dev_file.py  env_file.py  gitignore_file.py  main_file.py  migrations_env_file.py  run_file.py  template_file.py
hut/: __init__.py  __main__.py
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_cli.py
tests/integration/: __init__.py  test_build_workflow.py
tests/unit/: __init__.py  test_base_setup.py  test_database_factory.py  test_db_setup.py  test_env_setup.py  test_file_writer.py  test_files_setup.py  test_git_setup.py  test_structure_setup.py  test_utils.py
