[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "builders-hut"
version = "0.1.0"
requires-python = ">=3.13"
description = "FastAPI Scaffolding Tool"
readme = "README.md"
authors = [
    {name = "Arnab Gupta", email = "arnabgupta84@gmail.com"},
]
maintainers = [
  {name = "Arnab Gupta", email = "arnabgupta84@gmail.com"},
]
license = {file = "LICENSE.txt"}
keywords = [
    "fastapi",
    "scaffolding",
    "project",
    "generator",
    "boilerplate",
    "template",
    "skeleton",
    "framework",
    "tool",
    "application",
    "service",
    "module",
    "component",
    "library",
    "package",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
    "build",
    "twine",
    "typer",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
hut = "builders_hut.__main__:main"

[tool.uv.workspace]
members = [
    "demo",
]
