[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "builders-hut"
version = "0.4.3"
requires-python = ">=3.13"
description = "FastAPI Scaffolding Tool"
readme = "README.md"
authors = [{ name = "Arnab Gupta", email = "arnabgupta84@gmail.com" }]
maintainers = [{ name = "Arnab Gupta", email = "arnabgupta84@gmail.com" }]
license = "BSD-3-Clause"
keywords = [
    "fastapi",
    "scaffolding",
    "project",
    "generator",
    "boilerplate",
    "template",
    "skeleton",
    "framework",
    "tool",
    "application",
    "service",
    "module",
    "component",
    "library",
    "package",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["build", "twine", "typer", "tomlkit", "rich"]

# Optional dependencies for development and testing
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/Agsdovah95/builders-hut"
Documentation = "https://github.com/Agsdovah95/builders-hut/blob/main/README.md"
Repository = "https://github.com/Agsdovah95/builders-hut"
Issues = "https://github.com/Agsdovah95/builders-hut/issues"
Changelog = "https://github.com/Agsdovah95/builders-hut/blob/main/CHANGELOG.md"

[project.scripts]
hut = "builders_hut.cmd_interface:app"

[tool.setuptools.packages.find]
include = ["builders_hut*", "hut*"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=builders_hut --cov-report=term-missing"

# Coverage configuration
[tool.coverage.run]
source = ["builders_hut"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
